fix:偶现点击某条目没退出全局搜索页面， 但实际已经进入了系统设置对应的模块下 link:http://172.17.66.192/biz/bug-view-46439.html

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ukui-search (3.0.1-1+0428) v101; urgency=medium
+
+  * fix:打开全局搜索后，灰色提示文字“全局搜索”字样下方显示不全
+
+ -- sunfengsheng <sunfengsheng@kylinos.cn>  Mon, 26 Apr 2021 15:14:13 +0800
+
 ukui-search (3.0.1-1+0408) v101; urgency=medium
 
   * fix:解决管控不全问题
